# AI-powered-jenkins-pipeline-auditor

./: .gitignore  Jenkinsfile  README.md  another.groovy  app.py  docker-compose.yml  final_security_report.md  install  jenkinsfile.simple_declarative_pipeline_using_html_reports  main.py  pyproject.toml  render.yaml  run_benchmark.py  webhook_handler.py
ai_powered_jenkins_auditor/: Pipeline_manager.py  jenkins_file_parser.py
ai_powered_jenkins_auditor/jenkins_files_parser/: Pipeline_manager.py  jenkins_file_parser.py
ai_powered_jenkins_auditor/linters/: agent_linter.py  base_linter.py  environment_linter.py  pii_linter.py  stage_linter.py
ai_powered_jenkins_auditor/models/: pipeline.py
app/: app.py  dockerfile  main.py  pyproject.toml
benchmark_results/: 1_insecure_obvious_report.md  2_insecure_subtle_report.md  3_perfectly_secure_report.md  4_outdated_component_report.md  5_complex_insecure_report.md  6_multistage_secure_report.md  7_env_command_injection_report.md  8_secure_withcredentials_report.md  example_2_unused_env_report.md  example_3_hardcoded_secret_report.md  example_4_dangerous_curl_report.md  example_5_valid_multibranch_report.md
jenkins_files_directory/: 1_scripted_failure.groovy  4_dangerous_shell_usage.groovy  5_valid_multibranch.groovy
tests/: Pipeline_builder.py  benchmark_data.py  conftest.py  test_Pipeline_manager.py  test_agent_benchmark.py  test_agent_linter.py  test_credential_remover.py  test_environment_linter.py  test_jenkins_file_parser.py  test_pii_linter.py  test_stage_linter.py  test_workflow.py
(+33 files in other folders)
